# palamedes

./: .containerignore  .gitattributes  .gitignore  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DECISIONS.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  STATUS.md  eslint.config.mjs  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  vitest.examples.config.mjs
.changeset/: README.md  config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bootstrap-native-publish.yml  capture-example-screenshots.yml  ci.yml  deploy-examples.yml  deploy-site.yml  publish-examples-container.yml  publish.yml  release-pr.yml
.sf-plugin/: config.json
adr/: 001-project-scope-and-positioning.md  001-standalone-repository.md  002-oxc-over-babel-swc-for-macro-transformation.md  002-rust-first-core-with-thin-host-adapters.md  003-source-string-first-message-identity.md  003-uselingui-vs-getlingui-macros.md  004-internal-compiled-lookup-keys.md  004-trans-always-transforms-to-react-component.md  005-message-id-generation.md  005-universal-geti18n-runtime-model.md  006-ferrocat-as-catalog-and-icu-foundation.md  006-framework-adapter-architecture.md  007-native-boundary-and-distribution.md  007-source-map-support.md  008-framework-adapter-architecture.md  008-server-side-i18n-with-server-actions.md  009-pofile-ts-as-central-po-library.md  009-typed-napi-boundary-with-workflow-first-native-operations.md  010-generated-typescript-types-derived-from-the-native-binding-surface.md  010-oxc-based-message-extraction.md  011-host-adapters-render-module-source-from-compiled-catalog-artifacts.md  011-rust-core-with-thin-node-typescript-wrappers.md  012-native-node-bindings-via-napi-rs.md  012-translation-augmentation-boundary.md  013-defer-cli-worker-parallelism-until-benchmarked-need.md  013-hybrid-native-extractor-rollout.md  014-native-transform-source-maps.md  014-universal-geti18n-runtime-primitive.md  015-runtime-formatter-subset-diagnostics.md  015-rust-first-i18n-core-with-thin-host-adapters.md  016-native-cli-and-yaml-first-configuration.md
benchmarks/e2e-workflow/: README.md  package.json
benchmarks/large-catalog/: README.md  fixture.mjs
crates/palamedes/: Cargo.toml
crates/palamedes-cli/: Cargo.toml
crates/palamedes-cli/src/: config.rs  main.rs
crates/palamedes-node/: Cargo.toml
crates/palamedes-node/src/: catalog.rs  catalog_config.rs  extract.rs  lib.rs  po.rs  shared.rs  transform.rs
crates/palamedes/src/: catalog_audit.rs  catalog_combine.rs  catalog_module.rs  catalog_update.rs  choice.rs  descriptor.rs  diagnostic.rs  error.rs  extract.rs  jsx_entities.rs  jsx_message.rs  lib.rs  message_metadata.rs  placeholder_name.rs  runtime_icu.rs  test_support.rs  transform.rs  translation_scope.rs
crates/palamedes/src/catalog_artifact/: compile.rs  load.rs  mod.rs  resolve.rs  tests.rs  types.rs
crates/palamedes/src/transform/: imports.rs  messages.rs  mod.rs  runtime.rs  tests.rs  visitor.rs
docs/: approach-comparison.md  backend-servers.md  benchmark-e2e-workflow.md  benchmark-lingui-v6-preview.md  catalog-formats.md  cli.md  comparison-with-lingui.md  configuration.md  demo-deployments.md  first-working-translation.md  founder-led-content.md  framework-example-notes.md  icu-semantics-proof.md  locale-strategies.md  migrate-from-lingui.md  principles.md  proof-and-benchmarks.md  pseudo-localization.md  stability.md  translation-module-boundaries.md  translation-workflow-surface.md  troubleshooting.md
docs/adr/: README.md  (+1 more)
examples/: README.md
scripts/: benchmark-proof.mjs  build-readme-hero.mjs  capture-example-screenshots.mjs  check-published-types.mjs  check-release-set.mjs  copy-llms-to-site.mjs  deploy-examples.mjs  example-matrix.mjs  normalize-next-required-server-files.mjs  print-example-matrix.mjs  proof-icu-semantics.mjs  publish-native-placeholders.mjs  publish-package-if-needed.mjs  verify-examples-all.mjs  verify-examples-browser.mjs  verify-examples.mjs  verify-site-bench-data.mjs  verify-site-routes.mjs
site/: .gitignore  README.md  package.json  react-router.config.ts  tsconfig.typedoc.json  vite.config.ts
(+504 files in other folders)
