[workspace]
members = ["crates/palamedes", "crates/palamedes-node"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/sebastian-software/palamedes"
rust-version = "1.85"

[workspace.lints.rust]
future_incompatible = "warn"
unused_must_use = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
question_mark = "warn"
redundant_clone = "warn"
needless_borrow = "warn"
unnecessary_get_then_check = "warn"
