[package]
name = "palamedes-cli"
version = "0.11.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Native command-line interface for Palamedes."

[[bin]]
name = "pmds"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
config = { version = "0.15.25", default-features = false, features = ["json", "toml", "yaml"] }
globset = "0.4.18"
ignore = "0.4.25"
notify = "8.2.0"
palamedes = { path = "../palamedes" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
