[package]
name = "palamedes-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for the Palamedes Rust core."
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.6", default-features = false, features = ["napi9"] }
napi-derive = "3.5.5"
palamedes = { path = "../palamedes" }

[build-dependencies]
napi-build = "2.3.0"
