[package]
name = "palamedes-node"
version = "0.7.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for the Palamedes Rust core."
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.0", default-features = false, features = ["napi9"] }
napi-derive = "3.5.6"
palamedes = { path = "../palamedes" }

[build-dependencies]
napi-build = "2.3.2"
