[package]
name = "palamedes-node"
version = "1.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for the Palamedes Rust core."
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.4", default-features = false, features = ["napi9"] }
napi-derive = "3.5.7"
palamedes = { path = "../palamedes" }
serde_json = "1.0.150"

[build-dependencies]
napi-build = "2.3.2"
