[package]
name = "palamedes"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust core for Palamedes."

[dependencies]
ferrocat = "0.12.0"
oxc_allocator = "0.133.0"
oxc_ast = "0.133.0"
oxc_ast_visit = "0.133.0"
oxc_parser = "0.133.0"
oxc_span = "0.133.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
string_wizard = "1.0.3"
thiserror = "2.0.18"
