[package]
name = "palamedes"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust core for Palamedes."

[dependencies]
ferrocat = "0.13.0"
oxc_allocator = "0.132.0"
oxc_ast = "0.132.0"
oxc_ast_visit = "0.132.0"
oxc_parser = "0.132.0"
oxc_span = "0.132.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
string_wizard = "0.0.27"
thiserror = "2.0.18"
